--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,32 @@ section {
     transition: ease 0.3s all;
 }
 
+/* Scroll To Top Style */
+.scroll__btn {
+    position: sticky;
+    bottom: 1em;
+    height: 3em;
+    width: 3em;
+    margin-top: 1em;
+    font-size: large;
+    transition: all 0.3s ease-out;
+    border: none;
+    border-radius: 50%;
+    visibility: hidden;
+}
+
+.scroll__btn:hover {
+    transform: scale(1.2);
+}
+
+.scroll__btn:focus {
+    outline: none;
+}
+
+.scroll__btn:active {
+    transform: scale(0.8);
+}
+
 /* Header Styles */
 .page__header {
     background: #fff;
